[package]
name = "sudoku_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.6"
sha256 = "1.1"


# [profile.release]
# strip = true  # Automatically strip symbols from the binary.
# lto = true
# codegen-units = 1