[package]
name = "sudoku_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.6"
sha256 = "1.1"

[dev-dependencies]
criterion = "0.4"

[lib]
name = "sudoku_solver"
crate-type = ["lib"]
test = false
bench = false

[profile.release]
strip = true  # Automatically strip symbols from the binary.
# lto = true
# codegen-units = 1
# panic = "abort"

[[bench]]
name = "benchmark"
harness = false